benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExpPow2_DivMod_Mul_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExpPow2_DivMod_Mul.rs
Time: 2025-09-15 19:18:23

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_DivMod_Mul_impl.rs:34:18
   |
34 |     if a.len() < b.len() as int { -1 }
   |                  ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_DivMod_Mul_impl.rs:35:23
   |
35 |     else if a.len() > b.len() as int { 1 }
   |                       ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_DivMod_Mul_impl.rs:69:16
   |
69 |   for k in 0..(dividend_seq.len() as int) {
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_DivMod_Mul_impl.rs:99:17
   |
99 |       let idx = i as int;
   |                 ^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_DivMod_Mul_impl.rs:118:15
    |
118 |     if s1_seq[shift as int] == '1' {
    |               ^^^^^^^^^^^^

error[E0425]: cannot find function `reveal_str2int` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_DivMod_Mul_impl.rs:72:7
   |
72 |       reveal_str2int();
   |       ^^^^^^^^^^^^^^ help: a function with a similar name exists: `reveal_strlit`
  --> /Users/runner/work/verus/verus/source/builtin/src/lib.rs:1385:1
   |
   = note: similarly named function `reveal_strlit` defined here

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_DivMod_Mul_impl.rs:34:18
   |
34 |     if a.len() < b.len() as int { -1 }
   |                  ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_DivMod_Mul_impl.rs:35:23
   |
35 |     else if a.len() > b.len() as int { 1 }
   |                       ^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_DivMod_Mul_impl.rs:69:16
   |
69 |   for k in 0..(dividend_seq.len() as int) {
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_DivMod_Mul_impl.rs:99:17
   |
99 |       let idx = i as int;
   |                 ^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_DivMod_Mul_impl.rs:118:15
    |
118 |     if s1_seq[shift as int] == '1' {
    |               ^^^^^^^^^^^^

error[E0425]: cannot find function `reveal_str2int` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_DivMod_Mul_impl.rs:72:7
   |
72 |       reveal_str2int();
   |       ^^^^^^^^^^^^^^ help: a function with a similar name exists: `reveal_strlit`
  --> /Users/runner/work/verus/verus/source/builtin/src/lib.rs:1385:1
   |
   = note: similarly named function `reveal_strlit` defined here

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0425`.
